--- a/KaizenEngine/KaizenEngine.csproj
+++ b/KaizenEngine/KaizenEngine.csproj
@@ -42,6 +42,10 @@
     <Compile Include="GameInput\GameInputManager.cs" />
     <Compile Include="GameInput\GamePadInput.cs" />
     <Compile Include="GameInput\KeyboardInput.cs" />
+    <Compile Include="Sprites\SpriteFrame.cs" />
+    <Compile Include="Sprites\SpriteRenderer.cs" />
+    <Compile Include="Sprites\SpriteSheet.cs" />
+    <Compile Include="Sprites\SpriteSheetLoader.cs" />
     <Compile Include="TestGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -60,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <Content Include="Content\SpriteData\BlackRabite.txt" />
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -67,6 +72,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
